--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 # version: "3.9"
 
+networks:
+  steawin-network:
+    driver: bridge
+
 services:
   db:
     image: mysql:8.0
@@ -8,10 +12,12 @@ services:
     environment:
       MYSQL_DATABASE: steadwinGroup
       MYSQL_USER: steadwin
-      MYSQL_PASSWORD: ${PASS}
-      MYSQL_ROOT_PASSWORD: ${PASS}
+      MYSQL_PASSWORD: ritik1234
+      MYSQL_ROOT_PASSWORD: ritik1234
     ports:
-      - "3307:3306"
+      - "3307:3306"  # Host access only
+    networks:
+      - steawin-network
     volumes:
       - db_data:/var/lib/mysql
 
@@ -22,14 +28,16 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: ${PORT}/steadwinGroup
+      SPRING_DATASOURCE_URL: jdbc:mysql://steadwin_db:3306/steadwinGroup
       SPRING_DATASOURCE_USERNAME: steadwin
-      SPRING_DATASOURCE_PASSWORD: ${PASS}
+      SPRING_DATASOURCE_PASSWORD: ritik1234
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_JPA_SHOW_SQL: "true"
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
     depends_on:
       - db
+    networks:
+      - steawin-network
 
 volumes:
   db_data:
