--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,14 @@ spring.application.name=steawin-group
 # for db setup in docker
 
 # spring.application.name=steawin-group
-
-spring.datasource.url=${PORT}/steadwinGroup
+# MySQL connection
+spring.datasource.url=jdbc:mysql://steadwin_db:3306/steadwinGroup?useSSL=false&serverTimezone=UTC
 spring.datasource.username=steadwin
-spring.datasource.password=${PASS}
+spring.datasource.password=ritik1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
