--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     container_name: steadwin_db
     restart: always
     environment:
-      MYSQL_DATABASE: steadwinGroup
-      MYSQL_USER: steadwin
-      MYSQL_PASSWORD: ritik1234
-      MYSQL_ROOT_PASSWORD: ritik1234
+      MYSQL_DATABASE: ${DATABASE}
+      MYSQL_USER: ${USERNAME}
+      MYSQL_PASSWORD: ${PASS}
+      MYSQL_ROOT_PASSWORD: ${PASS}
     ports:
       - "3307:3306"  # Host access only
     networks:
@@ -28,9 +28,9 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://steadwin_db:3306/steadwinGroup
-      SPRING_DATASOURCE_USERNAME: steadwin
-      SPRING_DATASOURCE_PASSWORD: ritik1234
+      SPRING_DATASOURCE_URL: jdbc:mysql://${HOST}:3306/${DATABASE}?useSSL=false&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: ${USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${PASS}
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_JPA_SHOW_SQL: "true"
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
