--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.application.name=steawin-group
 
 # spring.application.name=steawin-group
 # MySQL connection
-spring.datasource.url=jdbc:mysql://steadwin_db:3306/steadwinGroup?useSSL=false&serverTimezone=UTC
-spring.datasource.username=steadwin
-spring.datasource.password=ritik1234
+spring.datasource.url=jdbc:mysql://steadwin_db:3306/${DATABASE}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate / JPA
